[tool.poetry]
name = "grafana-screenshot"
version = "0.1.0"
description = ""
authors = ["Takato Ueno <naf@auriga.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.0"
configparser = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
